@@ -1,3 +1,9 @@
+16/09/14 Julien Dutheil
+* Fixed bug #79
+
+24/07/14 Julien Dutheil
+* Alphabet code gets a refreshment!
+
 05/03/13 -*- Version 2.1.0 -*- 
 
 07/02/13 Julien Dutheil
